tests/toy/neg/001112_mutation.toylang
program a = { if a var a : bool sleep; } .
